; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_contextswitch.c_csw_perf_test_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_contextswitch.c_csw_perf_test_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"/usr/local/bin/clpcctrl\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"-d\00", align 1
@__const.csw_perf_test_cleanup.clpcctrl_args = private unnamed_addr constant [3 x i8*] [i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@environ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @csw_perf_test_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @csw_perf_test_cleanup() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca [3 x i8*], align 16
  %4 = bitcast [3 x i8*]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 bitcast ([3 x i8*]* @__const.csw_perf_test_cleanup.clpcctrl_args to i8*), i64 24, i1 false)
  %5 = getelementptr inbounds [3 x i8*], [3 x i8*]* %3, i64 0, i64 0
  %6 = load i8*, i8** %5, align 16
  %7 = getelementptr inbounds [3 x i8*], [3 x i8*]* %3, i64 0, i64 0
  %8 = load i32, i32* @environ, align 4
  %9 = call i32 @posix_spawn(i32* %2, i8* %6, i32* null, i32* null, i8** %7, i32 %8)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @waitpid(i32 %10, i32* %1, i32 0)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @posix_spawn(i32*, i8*, i32*, i32*, i8**, i32) #2

declare dso_local i32 @waitpid(i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
